--- a/website/website.html
+++ b/website/website.html
@@ -25,7 +25,7 @@
 	nav {
 	float:left;
 	width: 30%;
-	height: 1500px;
+	height: 1700px;
 	background: #d1d1e0;
 	padding: 20px;
 	}
@@ -104,20 +104,29 @@
 	</nav>
 	<article>
 		<h3>Project Description</h3>
-		<p>The project is a smart chair that encourages healthy habits in an office job. One of 
+		<table>
+		<tr>
+		<td style="width:60%">
+		<p style="font-size: 15px">The project is a smart chair that encourages healthy habits in an office job. One of 
 		the many issues facing office workers is back pain caused by long periods of time sitting
 		coupled with poor posture. The product includes an array of sensors that are located on 
 		the seat of the office chair and gather data on the user’s sitting trends. The smart chair
 		monitors how long the user sits and reminds them to get up at a regular interval. The device
 		also monitors the user’s posture and provides feedback. The smart chair pairs with an application
 		on the user’s phone to provide feedback and reminders. </p>
-		
+		</td>
+		<td style="width:40%">
+		<img src="assets/chairSimpleSide2.png" style="max-width:100%;max-height:100%"/>
+		</td>
+		</tr>
+		</table>
+		<br />
 		<table>
 		<tr>
 		<td><img src="assets/pcb5.jpg" style="max-width:100%;max-height:100%"/></td>
 		<td><img src="assets/chairBase2.jpg" style="max-width:100%;max-height:100%"/></td>
 		<td><img src="assets/enclosure.jpg" style="max-width:100%;max-height:100%"/></td>
-		
+	
 		</tr>
 		</table>
 		 <hr/>
