--- a/website/website.html
+++ b/website/website.html
@@ -96,7 +96,7 @@
 			<ul>
 			<li><a href="paperwork/sd2/cdr.pptx" target="_blank">Critical Design Review</a></li>
 			<li><a href="paperwork/sd2/conferencePaper.pdf" target="_blank">Conference Paper</a></li>
-			<li><a href="#">Senior Design 2 Final Presentation</a></li>
+			<li><a href="paperwork/sd2/FinalPresentation.pptx">Senior Design 2 Final Presentation</a></li>
 			<li><a href="#">Senior Design 2 Final Document</a></li>
 			<li><a href="https://github.com/annavaykean/seniordesign_protoype" target="_blank">Github</a></li>
 			</ul>
@@ -182,13 +182,21 @@
 		 </table>
 		 <hr />
 		 <h4>Contact Us</h4>
+		 <table>
+		 <tr>
+		 <td>
 		 <p style="font-size:12px">If you have any questions or concerns regarding this project, the team members can be reached via email.</p>
 		 <p style="font-size:12px">Mackenson Jean (Power System) - <a href="mailto:jeanmackenson3@gmail?Subject=Senior%20Design%20Project">jeanmackenson3@gmail.com</a></p>
 	
 		 <p style="font-size:12px">Annavay Kean (Mobile Application and Database) - <a href="mailto:annavaykean1@gmail?Subject=Senior%20Design%20Project">annavaykean1@gmail.com</a></p>
 		 <p style="font-size:12px">Thien Nguyen (System Communication) - <a href="mailto:thienphuonghoangnguyen@gmail?Subject=Senior%20Design%20Project">thienphuonghoangnguyen@gmail.com</a></p>
 		 <p style="font-size:12px">Bonarine Ramjas (Embedded Systems and Hardware Design) - <a href="mailto:bonarine.ramjas@gmail?Subject=Senior%20Design%20Project">bonarine.ramjas@gmail.com</a></p>
-
+		 </td>
+		 <td>
+		 	<img src="assets/groupPic.jpg" style="max-width:70%;max-height:70%"/>
+		 </td>
+		 </tr>
+		 </table>
 	</article>
 </section>
 <footer>
