--- a/website/website.html
+++ b/website/website.html
@@ -152,7 +152,7 @@
 			<p style="float:left;font-size:12px"><b>Annavay Kean</b> is a senior in Computer Engineering
 			at the University of Central Florida. She will be receiving her Bachelor of Science
 			in Computer Engineering in August 2019. She will be working as a software engineer 
-			for Jacobs’ after graduation.</p>
+			for Jacobs after graduation.</p>
 			</td>
 			</tr>
 			<tr>
