--- a/website/website.html
+++ b/website/website.html
@@ -80,7 +80,7 @@
 <body>
 <header>Smart Chair
 <hr class="hrForTitle"/>
-<p style="font-size:20px">Senior Design Summer 2019</p>
+<p style="font-size:20px">Senior Design Spring-Summer 2019</p>
 </header>
 <section>
 	<nav>
