--- a/website/index.html
+++ b/website/index.html
@@ -97,8 +97,9 @@
 			<li><a href="paperwork/sd2/cdr.pptx" target="_blank">Critical Design Review</a></li>
 			<li><a href="paperwork/sd2/conferencePaper.pdf" target="_blank">Conference Paper</a></li>
 			<li><a href="paperwork/sd2/FinalPresentation.pptx">Senior Design 2 Final Presentation</a></li>
-			<li><a href="#">Senior Design 2 Final Document</a></li>
+			<li><a href="paperwork/sd2/120pgFINAL_unbinded.pdf" target="_blank">Senior Design 2 Final Document</a></li>
 			<li><a href="https://github.com/annavaykean/seniordesign_protoype" target="_blank">Github</a></li>
+			<li><a href="paperwork/sd2/seniordesign_protoype.zip" target="_blank">Backup of Code</a></li>
 			</ul>
 		</ul>
 	</nav>
